[package]
name = "cbapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
protocol = { path = "../protocol" }
redis = { version = "0.23.3", features = ["tokio-comp", "aio"] }
